Fixed checkbox shifting issue (similar to 49af221)

--- a/res/style.css
+++ b/res/style.css
@@ -106,6 +106,10 @@
 	margin-bottom: 0;
 }
 
+.answer .content {
+	display: block;
+}
+
 
 /* Answer coloring */
 
